Un Heading 2 fue agregado

--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
     <title>Hello From Github</title>
   </head>
   <body>
+    <h2> Agregando un Heading 2 desde github </h2>
     <h1>Welcome to my website</h1>
     Hello, GitHub
   </body>
